Dev Update -- [otd: 142 wl:1.5hrs] * fixes social tabs overlapping buttons * fixed linked styling

--- a/webroot/css/theme/dcsmt.css
+++ b/webroot/css/theme/dcsmt.css
@@ -135,7 +135,7 @@
 }
 .tab-inner .profile h3 {
 	margin: 0;
-	padding: 5px 0 3px 26px;
+	padding: 5px 0 3px 5px;
 	position: relative;
 	font-size: 14px; 
 	line-height: 20px;
